# haskell_ex_MAS

./: .gitignore  .gitlab-ci.yml  README.md  stack.yaml
Ch01/: Ch01.cabal  Exercises.hs  Tests.hs
Ch02/: Ch02.cabal  Exercises.hs  Tests.hs  test.hs
Ch03/: Ch03.cabal  Exercises.hs  Tests.hs
Ch04/: Ch04.cabal  Exercises.hs  Tests.hs
Ch05/: Ch05.cabal  Exercises.hs  Tests.hs
Ch06/: Ch06.cabal  Exercises.hs  Tests.hs
Ch07/: Ch07.cabal  Exercises.hs  Tests.hs
Ch08/: Ch08.cabal  Exercises.hs  Tests.hs
Ch10/: Ch10.cabal  Exercises.hs  Tests.hs
Ch12/: Ch12.cabal  Exercises.hs  Tests.hs
Ch16/: Ch16.cabal  Exercises.hs  Tests.hs
