name:       Ch12
version:    0.0.1
cabal-version: >= 1.10
build-type: Simple

library
    exposed-modules:
        Exercises
    build-depends: base
    default-language: Haskell2010

Test-Suite tests
    main-is: Tests.hs
    type: exitcode-stdio-1.0
    other-modules:
        Exercises
    build-depends: base, hspec, genvalidity-hspec, QuickCheck, Ch12
    default-language: Haskell2010
